# CSD2

./: .gitignore  CMakeLists.txt  README.md
Blok2b/: CMakeLists.txt
Blok2b/JuceTest/: main.cpp
Blok2b/opdrachten/: CMakeLists.txt
Blok2b/opdrachten/01_helloWorld/: helloWorld.cpp
Blok2b/opdrachten/02_instrumentClass/: CMakeLists.txt  instrumentClass.cpp  instrumentClass.h
Blok2b/opdrachten/03_eigenClasses/: microphoneClass.cpp  microphoneClass.h
Blok2b/opdrachten/04_instrumentInheritance/: CMakeLists.txt  instrument.cpp
Blok2b/opdrachten/05_soundingSine/: CMakeLists.txt  customCallback.h  main.cpp  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h
Blok2b/opdrachten/06_synthSong/: CMakeLists.txt  customCallback.h  main.cpp  organSynth.cpp  organSynth.h  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h  synth.cpp  synth.h
Blok2b/opdrachten/07_eindopdracht/: CMakeLists.txt  callback.cpp  callback.h  main.cpp  organSynth.cpp  organSynth.h  oscillator.cpp  oscillator.h  saw.cpp  sine.cpp  square.cpp  square.h  synth.h
Blok2b/opdrachten/07_eindopdracht2.0/: CMakeLists.txt  callback.h  main.cpp  saw.h  uiUtilities.h
Blok2b/opdrachten/07_eindopdracht_1.1/: CMakeLists.txt  additiveSynth.cpp  callback.cpp  callback.h  main.cpp  organSynth.h  oscillator.cpp  saw.cpp  square.cpp  synth.cpp
Blok2b/opdrachten/08_eindopdracht2.0/: CMakeLists.txt  additiveSynth.cpp  additiveSynth.h  callback.cpp  callback.h  main.cpp  melody.h  organSynth.cpp  organSynth.h  oscillator.cpp  oscillator.h  saw.cpp  sine.cpp  square.cpp  synth.cpp  synth.h  uiUtilities.cpp
Blok2b/opdrachten/eigenClasses/: CMakeLists.txt  condenserClass.h  dynamicClass.h
Blok2b/opdrachten/instrumentClass/: instrumentClass.cpp  instrumentClassMain.cpp
Blok2b/opdrachten/instrumentInheritance/: instrument.cpp  instrument.h  main.cpp
Blok2b/test/: CMakeLists.txt
Blok2b/test/09_ui_generic/: main.cpp
Blok2b/test/10_enum_choices/: CMakeLists.txt  main.cpp  synth.cpp  synth.h  uiUtilities.cpp
Blok2b/test/CMakeTest/: CMakeLists.txt  hello.cpp
Blok2b/test/classInClass/: CMakeLists.txt  classInClass.cpp  driver.h  speaker.h  tweeter.h  woofer.h
Blok2b/test/classVoorbeeld/: class.cpp
Blok2b/test/hello/: hello.cpp
Blok2b/test/les2.cpp/: classesInHeader.cpp
Blok2b/test/oscillator/: CMakeLists.txt  main.cpp  oscillator.cpp  oscillator.h
Blok2b/test/simpleInheritance/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp  pet.cpp
Blok2b/test/sineSquareSawFinal/: oscillator.h
Blok2c/: CMakeLists.txt
Blok2c/opdrachten/: CMakeLists.txt
Blok2c/opdrachten/00_tremolo/: CMakeLists.txt  tremolo.cpp
Blok2c/opdrachten/01_circBufferDelay/: CMakeLists.txt  circBuffer.cpp  circBuffer.h  main.cpp  plot.py
Blok2c/opdrachten/03_effect/: effect.cpp  effect.h
Blok2c/opdrachten/04_interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.h  main.cpp
Blok2c/opdrachten/05_waveShaper/: CMakeLists.txt  callback.cpp  callback.h  circularBuffer.cpp  circularBuffer.h  waveShaper.cpp  waveShaper.h
Blok2c/opdrachten/06_bufferClass/: CMakeLists.txt  buffer.cpp  buffer.h  callback.cpp  callback.h  stereoChorus.cpp  waveShaper.cpp  waveShaper.h
Blok2c/opdrachten/06_stereoChorus/: CMakeLists.txt  buffer.cpp  buffer.h  stereoChorus.h  waveShaper.cpp  waveShaper.h
Blok2c/opdrachten/07_StereoChorus/: CMakeLists.txt  LFO.cpp  LFO.h  callback.cpp  callback.h  chorus.cpp  chorus.h  circularBuffer.cpp  circularBuffer.h  effect.cpp  effect.h  main.cpp  stereoChorus.cpp  stereoChorus.h  tremolo.h  waveShaper.cpp  waveShaper.h
Blok2c/opdrachten/08_eindopdracht/: CMakeLists.txt  RMS.cpp  RMS.h  callback.cpp  callback.h  chorus.cpp  chorus.h  circularBuffer.cpp  delay.cpp  delay.h  effect.cpp  effect.h  main.cpp  tremolo.cpp  tremolo.h  waveShaper.cpp  waveShaper.h
Blok2c/sharedCode/audio/: CMakeLists.txt  bufferDebugger.h  delayMath.h  diracDelta.h
Blok2c/sharedCode/oscillators/: CMakeLists.txt  fastSine.cpp  fastSine.h  oscillator.cpp  oscillator.h  saw.cpp  sine.cpp  sine.h  triangle.cpp  triangle.h
Blok2c/test/: CMakeLists.txt  test.cpp
Blok2c/test/00_testFile/: CMakeLists.txt  main.cpp
Blok2c/test/02_enums/: CMakeLists.txt  LFO.cpp  LFO.h  main.cpp
Blok2c/test/03_filterDaan/: CMakeLists.txt  Filters.h  deltasequence.h  main.cpp
Blok2c/test/04_multithreading/: CMakeLists.txt  main.cpp
Blok2c/test/05_pythonPlotter/: CMakeLists.txt  filters.h  main.cpp  output.csv
Blok2c/test/06_RMS/: CMakeLists.txt  main.cpp
Blok2c/test/07_pythonPlotter2.0/: CMakeLists.txt  filters.h  main.cpp  output.csv  plot.py
Blok2c/test/effect/: CMakeLists.txt  output.csv  tremolo.h
Blok2d/: CMakeLists.txt
Blok2d/opdrachten/: CMakeLists.txt
Blok2d/opdrachten/00_combReverb/: CMakeLists.txt  README.md  callback.cpp  callback.h  circularBuffer.cpp  circularBuffer.h  combFilter.cpp  combFilter.h  combReverb.cpp  combReverb.h
Blok2d/opdrachten/00_eindproject/: CMakeLists.txt  README.md  circularBuffer.cpp  circularBuffer.h  combFilter.cpp  combFilter.h  effect.cpp  effect.h  reverb.cpp  reverb.h
Blok2d/opdrachten/01_CircBufferCheck/: CMakeLists.txt  circularBuffer.cpp  circularBuffer.h  main.cpp
Blok2d/opdrachten/01_circBufferCheck/: CMakeLists.txt  circularBuffer.cpp  main.cpp
Blok2d/opdrachten/02_schroedersReverb/: CMakeLists.txt  all-passFilter.cpp  all-passFilter.h  callback.cpp  callback.h  effect.h  schroedersReverb.cpp  schroedersReverb.h
Blok2d/opdrachten/03_improvedSchroederReverb/: CMakeLists.txt  README.md  all-passFilter.cpp  callback.cpp  callback.h  circularBuffer.cpp  circularBuffer.h  effect.cpp  filter.h  low-passFilter.cpp  low-passFilter.h  main.cpp  reverb.cpp  (+1 more)
Blok2d/test/: CMakeLists.txt
Blok2d/test/01_pythonPlotter2d/: CMakeLists.txt  circularBuffer.cpp  combFilter.cpp  combFilter.h  filter.cpp  filter.h  main.cpp  output.csv  plot.py
Blok2d/test/02_floatErrorCheck/: CMakeLists.txt  main.cpp
CSD2a/python_basics/: Aantekeningen_les2.py  eventBasedSequencer.py  helloworld.py  playsound.py  ritmischePlayback.py
(+4 files in other folders)
